cmake_minimum_required(VERSION 3.12)
if(POLICY CMP0015)
  cmake_policy(SET CMP0015 NEW)
endif()
project(gluttransform)
add_subdirectory(src)
find_package(Doxygen REQUIRED dot)
set(DOXYGEN_GENERATE_HTML YES)
set(DOXYGEN_GENERATE_MAN YES)
set(PROJECT_NAME "Transformation Feedback Demo")
set(PROJECT_BRIEF "Displays displacement and rotation for a transformation feedback setup.")
doxygen_add_docs(doc include COMMENT "Generating documentation.")
install(DIRECTORY openglresources DESTINATION /usr/share FILE_PERMISSIONS WORLD_READ)
install(DIRECTORY LGPL DESTINATION /usr/share/doc/gluttransform-doc FILE_PERMISSIONS WORLD_READ)
install(DIRECTORY build/html DESTINATION /usr/share/doc/gluttransform-doc FILE_PERMISSIONS WORLD_READ)
install(DIRECTORY build/man DESTINATION /usr/share/doc/gluttransform-doc FILE_PERMISSIONS WORLD_READ)
install(FILES README.txt CHANGELOG.txt gluttransformwriteup.odt gluttransformwriteup.pdf DESTINATION /usr/share/doc/gluttransform-doc PERMISSIONS WORLD_READ)
